                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 01-10-2004 fixed: [ 987004 ] Cancel doesn't work from remote when streaming
  - 01-10-2004 fixed: Remote control not functioning properly when XBMC is loaded
  - 30-09-2004 fixed: [ 1013492 ] vobsubs display incorrectly, but work in mplayer 1.0pre5
  - 30-09-2004 fixed: [ 1026946 ] Back did not work in My Programs when Flattening was off
  - 28-09-2004 added: new tag to XBoxMediaCenter.xml to allow the controller deadzone to be adjusted
  - 28-09-2004 fixed: Volume bar was offscreen in PAL60 modes
  - 27-09-2004 updated: German language file
  - 27-09-2004 added: Extra checking for errors + debug info to thumbnail creation
  - 27-09-2004 fixed: [ 1034556 ] Picture playback holds when playing music
  - 27-09-2004 fixed: Albums Icon view had text alignment problems.
  - 27-09-2004 added: Listcontrols can have <alignY>center</alignY> tags.  This should be the default
                      unless a specific text alignment is necessary.
  - 26-09-2004 changed: German language file
  - 26-09-2004 fixed: [ 1034835 ] CDrip to mp3 not include year and genre field
  - 26-09-2004 fixed: Buttons on subpanel caused issues
  - 26-09-2004 fixed: IMDb lookup could fail if the plot had no html tags in it.
  - 25-09-2004 fixed: <align>right</align> didn't work for buttons
  - 25-09-2004 fixed: [ 1031023 ] Problem with little .wav (like 5 seconds lenght)
                      Caused by tracks being truncated a few secs with HQ resampling on.
  - 25-09-2004 fixed: green videowindow & calibrationscreen after stopping a video
  - 25-09-2004 fixed: flickering subtitles in videowindow & calibrationscreen